Fixing some positions of sidebars on mobile

--- a/src/assets/scss/_custom-buefy.scss
+++ b/src/assets/scss/_custom-buefy.scss
@@ -111,3 +111,8 @@ ul.pagination-list {
   vertical-align: middle;
   margin-right: 0;
 }
+
+// 
+.v-sidebar-menu {
+  height: 100% !important;
+}
